#    git diff <cluster commit id> Changelog
# Также стоит сравнить версии в следующих файлах:
#    yt/server/cell_master/serialize.cpp - если версия другая, то обновлнеие нужно делать через снапшот мастера (сделаный с --set-read-only).
#    yt/server/tablet_node/serialize.cpp - если версия другая, то обновление нужно делать с пересозданием таблет-целлов.

* shakurov: Добавлены новые поля в NNodeTrackerServer::TNode, обновляться через снапшот.
* shakurov: Добавлена настройка в конфиги медиумов; для корректной ее инициализации обновляться через снапшот.
* prime: Обновить архив операций до версии 28.
* aozeritsky: Добавлены новые поля в TUser, обновляться через снапшот.
* aozeritsky: Поменялся протокол сообщений между мастерами, обновляться через снапшот.
* aozeritsky: Поменялся протокол сообщений между мастерами, обновляться через снапшот.
* renadeen: Обновить архив операций до версии 27.
* max42: Необходимо обновить архив операций до версии минимум 26.
* savrus: Подправил протокол общения между мастерами, обновляться через снапшот.
* savrus: Подправил протокол общения между мастерами, обновляться через снапшот.
* savrus: В статистики таблет целлов добавилoсь поле health, обновляться через снапшот.
* babenko: У реплик таблиц появилось новое состояние "enabling" и изменился протокол перевода их в состояние "enabled". Обновление через снепшот.
* savrus: Подправил протокол общения между мастерами, обновляться через снапшот.
* savrus: Проверить, что на нодах кластера работает ядро версии не ниже 4.4.114-5 (нужно для ytalloc).
* savrus: Поменялась обработка prepare стадии mount/unmount/etc, обновляться через снапшот.
* savrus: Поменялся протокол сообщений между мастерами, обновляться через снапшот.
* savrus: Поменялся протокол сообщений между мастерами, обновляться через снапшот.
* savrus: Поменялся протокол доставки динтабличных статистик между мастерами. Нужно перед обновлением отмонтировать все динтаблицы