@@ -6,7 +6,7 @@ namespace NYT::NCellMaster {
 
 int GetCurrentSnapshotVersion()
 {
-    return 817;
+    return 818;
 }
 
 bool ValidateSnapshotVersion(int version)
@@ -95,7 +95,8 @@ bool ValidateSnapshotVersion(int version)
         version == 814 || // aozeritsky
         version == 815 || // aozeritsky: Add read_request_rate_limit and write_request_rate_limit
         version == 816 || // shakurov: initialize medium-specific max_replication_factor
-        version == 817;   // shakurov: persist TNode::Resource{Usage,Limits}_
+        version == 817 || // shakurov: persist TNode::Resource{Usage,Limits}_
+        version == 818;   // shakurov: int -> i64 for NSecurityServer::TClusterResources::{Node,Chunk}Count
 }
 
 ////////////////////////////////////////////////////////////////////////////////
