@@ -6,6 +6,7 @@
 #    yt/server/cell_master/serialize.cpp - если версия другая, то обновлнеие нужно делать через снапшот мастера (сделаный с --set-read-only).
 #    yt/server/tablet_node/serialize.cpp - если версия другая, то обновление нужно делать с пересозданием таблет-целлов.
 
+* shakurov: Увеличен тип TClusterResources::{Node,Chunk}Count с int до i64; обновляться через снапшот.
 * shakurov: Добавлены новые поля в NNodeTrackerServer::TNode, обновляться через снапшот.
 * shakurov: Добавлена настройка в конфиги медиумов; для корректной ее инициализации обновляться через снапшот.
 * prime: Обновить архив операций до версии 28.
